--- a/index.html
+++ b/index.html
@@ -6,14 +6,139 @@
 	<meta name="author" content="Choice">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2425</title>
+	<title>Stedelijk Museum</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2425</h1>
+	<header>
+		<section>
+			<h2>Header navigatie</h2>
+			<ul>
+				<li><a href="#">Bezoek</a></li>
+				<li><a href=""></a></li>
+				<li><a href=""></a></li>
+			</ul>
+		</section>
+
+		<section>
+			<h1>Stedelijk Museum Amsterdam, het museum voor moderne en hedendaagse kunst en vormgeving</h1>
+			<p>Museum voor moderne en hedendaagse kunst en vormgeving</p>
+		</section>
+		
+		<nav>
+		</nav>
+	</header>
+
+	<main>
+		<section>
+			<h2>Nu te zien: tentoonstellingen & events</h2>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Unravel - The Power And Politics Of Textiles In Art</h2>
+			<p>Vanaf Zaterdag</p>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Ana Lupas - On This Side Of The River Elbe</h2>
+			<p>Laatste Week</p>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Essentials: Must-See higlights uit de collectie</h2>
+			<img src="" alt="Essentials tour foto">
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Families</h2>
+			<p>T/M 18 jaar gratis entree</p>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Anselm Kiefer</h2>
+			<h3>Nieuws</h3>
+			<p>Tentoonstelling Stedelijk & Van Gogh Museum</p>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Post/No/Bills #5</h2>
+			<img src="" alt="Hezin O">
+			<h2>Hezin O</h2>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Buro Stedelijk: A New Space Within An Existing Space</h2>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Nieuwsbrief</h2>
+			<p>Als eerste op de hoogte van tentoonstellingen en events</p>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h2>Vrienden worden?</h2>
+			<p>Steun het Stedelijk en zie meer 🖤</p>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
+		<section>
+			<h3>Stedelijk op Instagram</h3>
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="Pijl naar rechts">
+		</section>
+	</main>
+
+	<footer>
+		<section>
+			<h2>Footer Navigatie</h2>
+		</section>
+		<section>
+			<h2>Nieuwsbrief</h2>
+			<p>Als eerste op de hoogte van de komende tentoonstellingen en events.</p>
+			<button>Schrijf je in</button>
+		</section>
+		<section>
+			<h2>Volg ons</h2>
+			<ul>
+				<li><a href="#">Instagram</a></li>
+				<li><a href="#">TikTok</a></li>
+				<li><a href="#">Facebook</a></li>
+				<li><a href="#">Twitter</a></li>
+				<li><a href="#">YouTube</a></li>
+			</ul>
+		</section>
+		<section>
+			<h2>Disclaimer</h2>
+			<p>Disclaimer</p>
+			<p>Colofon</p>
+			<p>Privacy</p>
+			<p>Actievoorwaarden</p>
+			<p>© 2024 Stedelijk Museum Amsterdam</p>
+		</section>
+		<section>
+			<h2>Externe Partners</h2>
+			<img src="" alt="Gemeente Amsterdam">
+			<h3>Partner</h3>
+			<img src="" alt="Vriendenloterij">
+		</section>
+
+	</footer>
 
 	<script defer src="scripts/script.js"></script>
 </body>
