--- a/index.html
+++ b/index.html
@@ -31,68 +31,67 @@
 		<nav>
 		</nav>
 	</header>
-
 	<main>
 		<section>
-			<h2>Nu te zien: tentoonstellingen & events</h2>
+			<h2><a href="#">Nu te zien: tentoonstellingen & events</a></h2>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Unravel - The Power And Politics Of Textiles In Art</h2>
+			<h2><a href="#">Unravel - The Power And Politics Of Textiles In Art</a></h2>
 			<p>Vanaf Zaterdag</p>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Ana Lupas - On This Side Of The River Elbe</h2>
+			<h2><a href="#">Ana Lupas - On This Side Of The River Elbe</a></h2>
 			<p>Laatste Week</p>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Essentials: Must-See higlights uit de collectie</h2>
+			<h2><a href="essentials.html">Essentials: Must-See highlights uit de collectie</a></h2>
 			<img src="" alt="Essentials tour foto">
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Families</h2>
+			<h2><a href="#">Families</a></h2>
 			<p>T/M 18 jaar gratis entree</p>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Anselm Kiefer</h2>
+			<h2><a href="#">Anselm Kiefer</a></h2>
 			<h3>Nieuws</h3>
 			<p>Tentoonstelling Stedelijk & Van Gogh Museum</p>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Post/No/Bills #5</h2>
+			<h2><a href="#">Post/No/Bills #5</a></h2>
 			<img src="" alt="Hezin O">
-			<h2>Hezin O</h2>
+			<h2><a href="#">Hezin O</a></h2>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Buro Stedelijk: A New Space Within An Existing Space</h2>
+			<h2><a href="#">Buro Stedelijk: A New Space Within An Existing Space</a></h2>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Nieuwsbrief</h2>
+			<h2><a href="#">Nieuwsbrief</a></h2>
 			<p>Als eerste op de hoogte van tentoonstellingen en events</p>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
-			<h2>Vrienden worden?</h2>
+			<h2><a href="#">Vrienden worden?</a></h2>
 			<p>Steun het Stedelijk en zie meer 🖤</p>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-
+	
 		<section>
 			<h3>Stedelijk op Instagram</h3>
 			<img src="" alt="">
@@ -103,7 +102,7 @@
 			<img src="" alt="Pijl naar rechts">
 		</section>
 	</main>
-
+	
 	<footer>
 		<section>
 			<h2>Footer Navigatie</h2>
