--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	
 		<section>
 			<h2><a href="#">Families</a></h2>
-			<p>T/M 18 jaar gratis entree</p>
+			<p>t/m 18 jaar gratis entree</p>
 			<img src="" alt="Pijl naar rechts">
 		</section>
 	
