foto's en fonts

--- a/essentials.html
+++ b/essentials.html
@@ -6,63 +6,59 @@
 	<meta name="author" content="Choice">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Essentials</title>
+	<title>Essentials Tour Stedelijk Museum</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+    <link href="styles/stylesess.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
 	<header>
-		<section>
-			<h2>Header navigatie</h2>
+		<nav>
 			<ul>
 				<li><a href="#">Bezoek</a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
+				<li><a href="#">Zoek</a></li>
 			</ul>
-		</section>
-		
+		</nav>
+        <a href="#">Boek ticket</a>
 		<nav>
 		</nav>
 	</header>
 
 	<main>
-        <section>
-            <h2>Essentials tour video</h2>
-            <video src=""></video>
-        </section>
+        <video aria-label="Essentials tour video" src="video/essentialsvideo.mp4"></video>
         
         <section>
             <h1>Essentials Tour</h1>
             <h2>Must-see highlights uit de collectie</h2>
             <p>Van Kusama tot Mondriaan, van Sottsass tot Koons, en van Dumas tot McQueen: Stedelijk Museum Amsterdam is het <i>must-see</i> museum voor moderne en hedendaagse kunst en vormgeving. Hier vind je wereldberoemde werken, maar ontdek je ook nieuwe favorieten.</p>
-            <button>Boek ticket</button>
+            <a href="#">Boek ticket</a>
             <section>
                 <h3>Must-see highlights uit de collectie foto's</h3>
                 <ul>
                     <li>
                         <figure>
-                            <img src="" alt="Twee mensen maken selfie bij werk Martial Raysse, 'Peinture à haute tension">
+                            <img src="images/martial-raysse.jpg" alt="Twee mensen maken selfie bij werk Martial Raysse, 'Peinture à haute tension">
                         <figcaption>Martial Raysse, 'Peinture à haute tension', 1965. Foto: Nina Schollaardt</figcaption>
                         </figure>
                     </li>
                     <li>
                         <figure>
-                            <img src="" alt="Twee vrouwen staan voor ‘Nama stap’, een kunstwerk van Igshaan Adams">
+                            <img src="images/igshaan-adams.jpg" alt="Twee vrouwen staan voor ‘Nama stap’, een kunstwerk van Igshaan Adams">
                         <figcaption>Igshaan Adams, ‘Nama stap’, 2023. Foto: Gert Jan van Rooij</figcaption>
                         </figure>
                     </li>
                     <li>
                         <figure>
-                            <img src="" alt="Vier mensen staan voor het werk 'Cathedra ': groot blauw doek.">
+                            <img src="images/barnett-newman.jpg" alt="Vier mensen staan voor het werk 'Cathedra ': groot blauw doek.">
                         <figcaption>Barnett Newman, 'Cathedra', 1951. Foto: Nina Schollaardt 
                         </figcaption>
                         </figure>
                     </li>
                     <li>
                         <figure>
-                            <img src="" alt="Jongen maakt foto van meisje voor een werk van Mondriaan. Meisje doet de vormen na met haar armen.">
+                            <img src="images/piet-mondriaan.jpg" alt="Jongen maakt foto van meisje voor een werk van Mondriaan. Meisje doet de vormen na met haar armen.">
                         <figcaption>Piet Mondriaan, 'Ruitvormige compositie met twee lijnen',  1931. Foto: Nina Schollaardt</figcaption>
                         </figure>
                     </li>
@@ -71,6 +67,7 @@
         </section>
 
         <section>
+            <img src="images/essentials-tour-rond.png" alt="Essentials Tour foto">
             <h2>Essentials Tour</h2>
             <p>Een collectie met zoveel kunst kan overweldigend voelen. Waar begin ik, welke werken mag ik echt niet overslaan en wie zijn deze beroemde kunstenaars nou eigenlijk?</p>
 
@@ -78,7 +75,7 @@
 
             <a href="#">Boek je ticket</a>
             <a href="#">Download de tour</a>
-            <img src="" alt="Essentials Tour foto">
+            <p>De tour is gratis en elke dag beschikbaar.</p>
         </section>
 
         <section>
@@ -88,37 +85,37 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="" alt="vrouw staat voor kunstwerk van Picasso">
+                        <img src="images/pablo-picasso.jpg" alt="vrouw staat voor kunstwerk van Picasso">
                         <figcaption>Pablo Picasso, 'Femme nue devant le Jardin', 1956. Foto: Nina Schollaardt</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="" alt="Muur met grote paarse letters Girrrl Girrrl Girrrl">
+                        <img src="images/martine-syms.jpg" alt="Muur met grote paarse letters Girrrl Girrrl Girrrl">
                         <figcaption>Martine Syms, 'GIRRRLGIRLLLGGGIRLGIIIRL,' 2017. Foto: Nina Schollaardt</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="" alt="Persoon staat in deuropening en kijkt naar werk van Kusama, witte boot met phallusvormen">
+                        <img src="images/yayoi-kusama.jpg" alt="Persoon staat in deuropening en kijkt naar werk van Kusama, witte boot met phallusvormen">
                         <figcaption>Yayoi Kusama, 'Aggregation: One Thousand Boats Show', 1963. Foto: Nina Schollaardt</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="" alt="Kleurige postermuur">
+                        <img src="images/zaalopname.jpg" alt="Kleurige postermuur">
                         <figcaption>Zaalopname 'Everyday, Someday and Other Stories. Collectie 1950 – 1980'. Foto: Peter Tijhuis</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="" alt="Zaalopname 'Everyday, Someday and Other Stories. Collectie 1950 – 1980'. Foto: Peter Tijhuis">
+                        <img src="images/steve-mcqueen.jpg" alt="Kunstwerk van Steve McQueen">
                         <figcaption>Steve McQueen, 'Broken Column', 2014. Foto: Gert Jan van Rooij</figcaption>
                     </figure>
                 </li>
                 <li>
                     <figure>
-                        <img src="" alt="Foto van vrouw op de witte omloop van het Stedelijk">
+                        <img src="images/omloop.jpg" alt="Foto van vrouw op de witte omloop van het Stedelijk">
                         <figcaption>Omloop. Foto: Nina Schollaardt</figcaption>
                     </figure>
                 </li>
@@ -130,7 +127,6 @@
             <p>Ben je er klaar? Klik hieronder!</p>
             <a href="#">Download tour</a>
         </section>
-
 
 	</main>
 
@@ -153,8 +149,7 @@
 				<li><a href="#">YouTube</a></li>
 			</ul>
 		</section>
-		<section>
-			<h2>Disclaimer</h2>
+		<section aria-label="Disclaimer">
 			<p>Disclaimer</p>
 			<p>Colofon</p>
 			<p>Privacy</p>
