--- a/index.html
+++ b/index.html
@@ -6,40 +6,43 @@
 	<meta name="author" content="Choice">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Stedelijk Museum</title>
+	<title>Homepage Stedelijk Museum</title>
 	
 	<link href="styles/style.css" rel="stylesheet">
+	<link href="styles/stylehome.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
 	<header>
-		<section>
-			<h2>Header navigatie</h2>
+		<h2>Header navigatie</h2>
+		<nav>
 			<ul>
 				<li><a href="#">Bezoek</a></li>
-				<li><a href=""></a></li>
-				<li><a href=""></a></li>
+				<li><a href="#">Zoek</a></li>
 			</ul>
-		</section>
+		</nav>
 
-		<section>
-			<h1>Stedelijk Museum Amsterdam, het museum voor moderne en hedendaagse kunst en vormgeving</h1>
-			<p>Museum voor moderne en hedendaagse kunst en vormgeving</p>
-		</section>
+        <a href="#">Boek ticket</a>
 		
 		<nav>
 		</nav>
 	</header>
+
 	<main>
+		<h1>Stedelijk Museum Amsterdam, het museum voor moderne en hedendaagse kunst en vormgeving</h1>
+		<p>Museum voor moderne en hedendaagse kunst en vormgeving</p>
 		<section>
 			<h2><a href="#">Nu te zien: tentoonstellingen & events</a></h2>
 			<img src="" alt="Pijl naar rechts">
 		</section>
-	
+		
 		<section>
-			<h2><a href="#">Unravel - The Power And Politics Of Textiles In Art</a></h2>
-			<p>Vanaf Zaterdag</p>
+			<h2>Stedelijk Collectie</h2>
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="">
+			<img src="" alt="">
 			<img src="" alt="Pijl naar rechts">
 		</section>
 	
@@ -54,7 +57,13 @@
 			<img src="" alt="Essentials tour foto">
 			<img src="" alt="Pijl naar rechts">
 		</section>
-	
+
+		<section>
+			<h2><a href="#">Unravel - The Power And Politics Of Textiles In Art</a></h2>
+			<p>Vanaf Zaterdag</p>
+			<img src="" alt="Pijl naar rechts">
+		</section>
+
 		<section>
 			<h2><a href="#">Families</a></h2>
 			<p>t/m 18 jaar gratis entree</p>
@@ -93,24 +102,25 @@
 		</section>
 	
 		<section>
-			<h3>Stedelijk op Instagram</h3>
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="">
-			<img src="" alt="Pijl naar rechts">
+			<h2>Stedelijk op Instagram</h2>
+				<ul>
+					<li><img src="" alt=""></li>
+					<li><img src="" alt=""></li>
+					<li><img src="" alt=""></li>
+					<li><img src="" alt=""></li>
+					<li><img src="" alt=""></li>
+					<li><img src="" alt="Pijl naar rechts"></li>
+				</ul>
 		</section>
+
 	</main>
 	
-	<footer>
-		<section>
-			<h2>Footer Navigatie</h2>
-		</section>
+	<footer aria-label="Footer navigatie">
+		<img src="" alt="Logo Stedelijk Museum met link naar homepagina">
 		<section>
 			<h2>Nieuwsbrief</h2>
 			<p>Als eerste op de hoogte van de komende tentoonstellingen en events.</p>
-			<button>Schrijf je in</button>
+			<a href="#">Schrijf je in</a>
 		</section>
 		<section>
 			<h2>Volg ons</h2>
@@ -122,8 +132,7 @@
 				<li><a href="#">YouTube</a></li>
 			</ul>
 		</section>
-		<section>
-			<h2>Disclaimer</h2>
+		<section aria-label="Disclaimer">
 			<p>Disclaimer</p>
 			<p>Colofon</p>
 			<p>Privacy</p>
