--- a/essentials.html
+++ b/essentials.html
@@ -18,17 +18,65 @@
 		<nav>
 			<ul>
 				<li><a href="#">Bezoek</a></li>
-				<li><a href="#">Zoek</a></li>
+				<li><a href="#"><img src="images/searchblack.svg" alt="Zoek icoon"></a></li>
 			</ul>
 		</nav>
+
         <a href="#">Boek ticket</a>
-		<nav>
-		</nav>
+		<section>
+			<!--bron https://codepen.io/3hos15/pen/wvLZvrE-->
+			<button aria-hidden="true">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <section>
+                <h2 class="visually-hidden">Header navigatie</h2>	
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Steun ons</a></li>
+                </ul>
+                <h2>Stedelijk Museum</h2>
+                <a href="#">Unbubble</a>
+                <h3>Openingstijden</h3>
+                <p>Dagelijks: 10 - 18 uur</p>
+                <h3>Prijzen</h3>
+                <p>Volwassenen: € 22,50</p>
+                <p>Student & CJP: € 10</p>
+                <a href="#">Boek ticket</a>
+    
+                <nav>
+                    <ul>
+                        <li><a href="#">Nu te zien</a></li>
+                        <li><a href="#">Bezoek</a>
+                            <ul>
+                                <li><a href="#">Plan je bezoek</a></li>
+                                <li><a href="#">Families</a></li>
+                                <li><a href="#">Rondleidingen</a></li>
+                                <li><a href="#">Toegankelijkheid</a></li>
+                                <li><a href="#">Veelgestelde vragen</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">Onderwijs</a></li>
+                        <li><a href="#">Verdieping</a></li>
+                        <li><a href="#">Museum</a></li>
+                        <li><a href="#">Nieuws & Pers</a></li>
+                        <li><a href="#">Steun ons</a></li>
+                    </ul>
+                </nav>
+
+                <address>
+                    <h3>Adres</h3>
+                    <p>Museumplein 10<br>1071 DJ Amsterdam<br>info@stedelijk.nl</p>
+                </address>
+                <a href="#">Plan je route</a>
+            </section>
+        </section>
 	</header>
 
 	<main>
-        <video aria-label="Essentials tour video" src="video/essentialsvideo.mp4"></video>
-        
+        <video aria-label="Essentials tour video" src="video/essentialsvideo.mp4" type="video/mp4"></video>
+        <button>Play</button>
         <section>
             <h1>Essentials Tour</h1>
             <h2>Must-see highlights uit de collectie</h2>
