--- a/essentials.html
+++ b/essentials.html
@@ -23,6 +23,7 @@
 		</nav>
 
         <a href="#">Boek ticket</a>
+
 		<section>
 			<!--bron https://codepen.io/3hos15/pen/wvLZvrE-->
 			<button aria-hidden="true">
@@ -36,7 +37,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">Steun ons</a></li>
                 </ul>
-                <h2>Stedelijk Museum</h2>
+                <h2>Stedelijk</h2>
                 <a href="#">Unbubble</a>
                 <h3>Openingstijden</h3>
                 <p>Dagelijks: 10 - 18 uur</p>
